--- a/HW/HW4/Programming Assignment 4 - Linear versus Ridge Regression-Spring 2020.ipynb
+++ b/HW/HW4/Programming Assignment 4 - Linear versus Ridge Regression-Spring 2020.ipynb
@@ -213,14 +213,16 @@
     "        X_train, X_test = X[train_index], X[test_index]\n",
     "        y_train, y_test = y[train_index], y[test_index]\n",
     "        \n",
-    "        # centering the data so we do not need the intercept term (we could have also chose w_0=average y value)\n",
-    "        y_train_mean = np.mean(y_train)\n",
-    "        y_train = y_train - y_train_mean\n",
-    "        y_test = y_test - y_train_mean\n",
     "        # scaling the data matrix\n",
     "        scaler = preprocessing.StandardScaler().fit(X_train)\n",
     "        X_train = scaler.transform(X_train)\n",
     "        X_test = scaler.transform(X_test)\n",
+    "        \n",
+    "        # Adding a column of 1's to the front of X_train and X_test\n",
+    "        one_col = np.ones((X_train.shape[0],1))\n",
+    "        X_train = np.hstack((one_col, X_train ))\n",
+    "        one_col = np.ones((X_test.shape[0],1))\n",
+    "        X_test  = np.hstack((one_col, X_test ))\n",
     "        \n",
     "        # determine the training error and the test error\n",
     "        #### TO-DO #####\n",
