re-organized the repository

--- a/HW/HW2/Spam Detection HW2 .ipynb
+++ b/HW/HW2/Spam Detection HW2 .ipynb
@@ -57,27 +57,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>ham</td>\n",
        "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>ham</td>\n",
        "      <td>Ok lar... Joking wif u oni...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>spam</td>\n",
        "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>ham</td>\n",
        "      <td>U dun say so early hor... U c already then say...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>ham</td>\n",
        "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
        "    </tr>\n",
@@ -149,27 +149,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>Ok lar... Joking wif u oni...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>U dun say so early hor... U c already then say...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
        "    </tr>\n",
@@ -213,7 +213,7 @@
      "output_type": "stream",
      "text": [
       "The number of training examples:  4179\n",
-      "The number of test exampels:  (1393,)\n",
+      "The number of test exampels:  1393\n",
       "The first four labels\n",
       "872     0\n",
       "831     1\n",
@@ -237,7 +237,7 @@
     "\n",
     "#Looking at the train/test split\n",
     "print(\"The number of training examples: \", df_train_msgs.shape[0])\n",
-    "print(\"The number of test exampels: \", df_test_msgs.shape)\n",
+    "print(\"The number of test exampels: \", df_test_msgs.shape[0])\n",
     "\n",
     "print(\"The first four labels\")\n",
     "print(df_ytrain[0:4])\n",
@@ -274,11 +274,11 @@
      "output_type": "stream",
      "text": [
       "CountVectorizer(analyzer='word', binary=True, decode_error='strict',\n",
-      "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
-      "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
-      "        ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
-      "        strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-      "        tokenizer=None, vocabulary=None)\n"
+      "                dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+      "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+      "                ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
+      "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+      "                tokenizer=None, vocabulary=None)\n"
      ]
     }
    ],
@@ -346,16 +346,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated value of P(y) for y = 1 is:  0.13448193347690834\n",
+      "The estimated value of P(y) for y = 0 is:  0.8655180665230916\n"
+     ]
+    }
+   ],
    "source": [
     "# You should NOT use the features of sklearn library in your code.\n",
     "#### TO-DO #####\n",
     "\n",
+    "# seperate the data into 2 parts\n",
+    "X_train_0 = X_train[y_train == 0]\n",
+    "X_train_1 = X_train[y_train == 1]\n",
     "\n",
+    "p_y0 = X_train_0.shape[0] / y_train.shape[0]\n",
+    "p_y1 = X_train_1.shape[0] / y_train.shape[0]\n",
     "\n",
+    "print(\"The estimated value of P(y) for y = 1 is: \", p_y1)\n",
+    "print(\"The estimated value of P(y) for y = 0 is: \", p_y0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# {index of feature: phi0_feature or phi1_feature}\n",
+    "phi0_vocabulary = {}\n",
+    "phi1_vocabulary = {}\n",
     "\n",
+    "def updatePhiVocabulary(m=0.):\n",
+    "    for feature in vectorizer.vocabulary_:\n",
+    "        index = int(vectorizer.vocabulary_[feature])\n",
+    "        # each index has only 2 possible values: 0 and 1\n",
+    "        phi0_vocabulary[index] = (np.count_nonzero(X_train_0[:, [index]] == 1) + m) / (X_train_0.shape[0] + m * 2)\n",
+    "        phi1_vocabulary[index] = (np.count_nonzero(X_train_1[:, [index]] == 1) + m) / (X_train_1.shape[0] + m * 2)\n",
+    "\n",
+    "updatePhiVocabulary()\n",
+    "\n",
+    "# save to a json file\n",
+    "import json\n",
+    "json0 = json.dumps(phi0_vocabulary)\n",
+    "json1 = json.dumps(phi1_vocabulary)\n",
+    "f = open(\"phi0_vocabulary.json\",\"w\")\n",
+    "f.write(json0)\n",
+    "f = open(\"phi1_vocabulary.json\",\"w\")\n",
+    "f.write(json1)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated value of phi_admirer for y = 1 is:  0.014234875444839857\n",
+      "The estimated value of phi_admirer for y = 0 is:  0.0\n",
+      "\n",
+      "The estimated value of phi_secret for y = 1 is:  0.014234875444839857\n",
+      "The estimated value of phi_secret for y = 0 is:  0.000552944429084877\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_admirer = vectorizer.vocabulary_['admirer']\n",
+    "print(\"The estimated value of phi_admirer for y = 1 is: \", phi1_vocabulary[index_admirer])\n",
+    "print(\"The estimated value of phi_admirer for y = 0 is: \", phi0_vocabulary[index_admirer])\n",
+    "print()\n",
+    "index_secret = vectorizer.vocabulary_['secret']\n",
+    "print(\"The estimated value of phi_secret for y = 1 is: \", phi1_vocabulary[index_secret])\n",
+    "print(\"The estimated value of phi_secret for y = 0 is: \", phi0_vocabulary[index_secret])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:10: RuntimeWarning: divide by zero encountered in log\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n",
+      "E:\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: divide by zero encountered in log\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The classes which were predicted for the first 5 examples in the test set are:  [0, 0, 0, 0, 0]\n",
+      "\n",
+      "The classes which were predicted for the last 5 examples in the test set are:  [0, 1, 1, 0, 0]\n",
+      "\n",
+      "The classes which were predicted for the first 50 examples in the test set are: \n",
+      "[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "\n",
+      "The percentage error on the examples in the test file is:  0.048815506101938265\n",
+      "The total number of test examples classified correctly is:  1325\n",
+      "The total number of test examples classified incorrectly is:  68\n"
+     ]
+    }
+   ],
+   "source": [
+    "def predictSingle(x):\n",
+    "    px_y0, px_y1 = 0., 0.\n",
+    "    p_y0 = X_train_0.shape[0] / y_train.shape[0]\n",
+    "    p_y1 = X_train_1.shape[0] / y_train.shape[0]\n",
+    "    \n",
+    "    for i in range(len(x)):\n",
+    "        phi_feature_0 = phi0_vocabulary[i] if x[i] else 1 - phi0_vocabulary[i]\n",
+    "        phi_feature_1 = phi1_vocabulary[i] if x[i] else 1 - phi1_vocabulary[i]   \n",
+    "        px_y0 += np.log(phi_feature_0)\n",
+    "        px_y1 += np.log(phi_feature_1)\n",
+    "    \n",
+    "    px_y0 += np.log(p_y0)\n",
+    "    px_y1 += np.log(p_y1)\n",
+    "    \n",
+    "    return 0 if px_y0 > px_y1 else 1\n",
+    "\n",
+    "# Predict\n",
+    "def predictGroup(X):\n",
+    "    y_predict = []\n",
+    "    error = 0\n",
+    "    for i in range(X.shape[0]):\n",
+    "        temp_result = predictSingle(X[i])\n",
+    "        y_predict += [temp_result]\n",
+    "        if temp_result != y_test[i]:\n",
+    "            error += 1\n",
+    "    error_rate = error / X_test.shape[0]\n",
+    "    return y_predict, error_rate, error\n",
+    "    \n",
+    "y_predict, error_rate, error = predictGroup(X_test)\n",
+    "print(\"The classes which were predicted for the first 5 examples in the test set are: \", y_predict[0:5])\n",
+    "print()\n",
+    "\n",
+    "print(\"The classes which were predicted for the last 5 examples in the test set are: \", y_predict[-5:])\n",
+    "print()\n",
+    "\n",
+    "print(\"The classes which were predicted for the first 50 examples in the test set are: \")\n",
+    "print(y_predict[0:50])\n",
+    "print()\n",
+    "\n",
+    "print(\"The percentage error on the examples in the test file is: \", error_rate)\n",
+    "print(\"The total number of test examples classified correctly is: \", X_test.shape[0] - error)\n",
+    "print(\"The total number of test examples classified incorrectly is: \", error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:10: RuntimeWarning: divide by zero encountered in log\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n",
+      "E:\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: divide by zero encountered in log\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When m = 0.05, the error rate is minimum: 0.013639626704953339\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add smoothing\n",
+    "min_error_rate = 1\n",
+    "best_m = 0\n",
+    "best_y_predict = []\n",
+    "m = 0.\n",
+    "while m <= 1.:\n",
+    "    updatePhiVocabulary(m)\n",
+    "    y_predict, error_rate, error = predictGroup(X_test)\n",
+    "    if error_rate < min_error_rate:\n",
+    "        best_m, min_error_rate, best_y_predict = m, error_rate, y_predict[:]\n",
+    "    m += 0.05\n",
+    "\n",
+    "print(\"When m = {}, the error rate is minimum: {}\".format(best_m, min_error_rate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The label which Zero-R predicts is:  0\n",
+      "The error rate of Zero-R is:  0.13280689160086145\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using Zero-R\n",
+    "zero_r_label = 0 if X_train_0.shape[0] > X_train_1.shape[0] else 1\n",
+    "print(\"The label which Zero-R predicts is: \", zero_r_label)\n",
+    "\n",
+    "error_rate = sum([zero_r_label ^ y_test[i] for i in range(X_test.shape[0])]) / X_test.shape[0]\n",
+    "print(\"The error rate of Zero-R is: \", error_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "##############"
    ]
   }
@@ -376,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
